<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="setting_mindstorms_nxt_bricks"
        android:summary="@string/preference_description_mindstorms_nxt_bricks"
        android:title="@string/preference_title_enable_mindstorms_nxt_bricks" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_mindstorms_nxt_bricks_enabled"
            android:summary="@string/preference_description_mindstorms_nxt_bricks"
            android:title="@string/preference_title_enable_mindstorms_nxt_bricks" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_mindstorms_nxt_show_sensor_info_box_disabled"
            android:summary="@string/preference_disable_nxt_info_dialog_description"
            android:title="@string/preference_disable_nxt_info_dialog"/>

        <PreferenceCategory android:title="@string/preference_title_mindstorms_nxt_sensors">
            <Preference android:summary="@string/preference_title_mindstorms_nxt_sensors_description" />

            <ListPreference
                android:defaultValue="TOUCH"
                android:key="setting_mindstorms_nxt_sensor_1"
                android:summary="%s"
                android:title="@string/nxt_choose_sensor_1"/>
            <ListPreference
                android:defaultValue="SOUND"
                android:key="setting_mindstorms_nxt_sensor_2"
                android:summary="%s"
                android:title="@string/nxt_choose_sensor_2"/>
            <ListPreference
                android:defaultValue="LIGHT_INACTIVE"
                android:key="setting_mindstorms_nxt_sensor_3"
                android:summary="%s"
                android:title="@string/nxt_choose_sensor_3"/>
            <ListPreference
                android:defaultValue="ULTRASONIC"
                android:key="setting_mindstorms_nxt_sensor_4"
                android:summary="%s"
                android:title="@string/nxt_choose_sensor_4"/>
        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="setting_parrot_ar_drone_bricks"
        android:summary="@string/preference_description_quadcopter_bricks"
        android:title="@string/preference_title_enable_quadcopter_bricks" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_parrot_ar_drone_bricks"
            android:summary="@string/preference_description_quadcopter_bricks"
            android:title="@string/preference_title_enable_quadcopter_bricks" />


        <PreferenceCategory android:title="@string/preference_title_drone_config_properties">
            <Preference android:summary="@string/preference_title_drone_properties_setting_description" />

            <ListPreference
                android:defaultValue="SECOND"
                android:key="setting_drone_basic_configs"
                android:summary="%s"
                android:title="@string/brick_drone_set_config"/>
            <ListPreference
                android:defaultValue="SECOND"
                android:key="setting_drone_altitude_limit"
                android:summary="%s"
                android:title="@string/brick_drone_set_altitude"/>
            <ListPreference
                android:defaultValue="SECOND"
                android:key="setting_drone_vertical_speed"
                android:summary="%s"
                android:title="@string/brick_drone_set_vertical_speed"/>
            <ListPreference
                android:defaultValue="SECOND"
                android:key="setting_drone_rotation_speed"
                android:summary="%s"
                android:title="@string/brick_drone_set_rotation_speed"/>
            <ListPreference
                android:defaultValue="SECOND"
                android:key="setting_drone_tilt_angle"
                android:summary="%s"
                android:title="@string/brick_drone_set_tilt_limit"/>
        </PreferenceCategory>

    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_arduino_bricks"
        android:summary="@string/preference_description_arduino_bricks"
        android:title="@string/preference_title_enable_arduino_bricks" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_nfc_bricks"
        android:summary="@string/preference_description_nfc_bricks"
        android:title="@string/preference_title_enable_nfc_bricks" />


    <PreferenceScreen
        android:key="settings_raspberry_screen"
        android:summary="@string/preference_description_raspi_bricks"
        android:title="@string/preference_title_enable_raspi_bricks" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_raspi_bricks"
            android:summary="@string/preference_raspi_enable_bricks"
            android:title="@string/preference_title_enable_raspi_bricks" />

        <PreferenceCategory
            android:title="@string/raspi_settings_title_name"
            android:key="setting_raspi_connection_settings_category">
            <PreferenceScreen
                android:title="@string/preference_raspi_help"
                android:summary="@string/preference_raspi_help_summary">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/preference_raspi_help_link"
                    />
            </PreferenceScreen>

            <EditTextPreference android:key="setting_raspi_host_preference"
                android:title="@string/preference_raspi_host"
                android:defaultValue="192.168.0.1" />

            <EditTextPreference android:key="setting_raspi_port_preference"
                android:title="@string/preference_raspi_port"
                android:inputType="number"
                android:defaultValue="10000" />

            <ListPreference android:key="setting_raspi_version_preference"
                android:title="@string/raspi_settings_gpio_version"
                android:summary="%s"
                android:entries="@array/raspi_version_spinner_names"
                android:entryValues="@array/raspi_version_spinner_revisions"
                android:defaultValue="a01041"/>
        </PreferenceCategory>

    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_enable_phiro_bricks"
        android:summary="@string/preference_description_phiro_bricks"
        android:title="@string/preference_title_enable_phiro_bricks" />

</PreferenceScreen>
