<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/copy"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/copy"/>
    <item
        android:id="@+id/cut"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/cut"/>
    <item
        android:id="@+id/insert_below"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/insert_below"/>
    <item
        android:id="@+id/move"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/move"/>
    <item
        android:id="@+id/rename"
        android:showAsAction="ifRoom"
        android:title="@string/rename"/>
    <item
        android:id="@+id/delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
</menu>