<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2015 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/copy"
        android:showAsAction="never"
        android:title="@string/copy"/>
    <item
        android:id="@+id/rename"
        android:showAsAction="never"
        android:title="@string/rename"/>
    <item
        android:id="@+id/show_details"
        android:showAsAction="never"
        android:title="@string/show_details"/>
    <item
        android:id="@+id/cut"
        android:showAsAction="never"
        android:title="@string/cut"
        android:visible="false"/>
    <item
        android:id="@+id/insert_below"
        android:showAsAction="never"
        android:title="@string/insert_below"
        android:visible="false"/>
    <item
        android:id="@+id/move"
        android:showAsAction="never"
        android:title="@string/move"
        android:visible="false"/>
    <item
        android:id="@+id/upload"
        android:showAsAction="never"
        android:title="@string/upload_button">
    </item>

</menu>
