<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Catroid: An on-device visual programming system for Android devices
 *  Copyright (C) 2010-2012 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *  
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *  
 *  An additional term exception under section 7 of the GNU Affero
 *  General Public License, version 3, is available at
 *  http://developer.catrobat.org/license_additional_term
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *  
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainMenuActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/website_blue"
    android:orientation="vertical" >

    <org.catrobat.catroid.ui.widget.DashboardLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/new_project_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_new"
            android:onClick="handleNewProjectButton"
            android:text="@string/main_menu_new" />

        <Button
            android:id="@+id/current_project_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_continue"
            android:onClick="handleCurrentProjectButton"
            android:text="@string/main_menu_continue" />

        <Button
            android:id="@+id/projects_on_phone_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_programs"
            android:onClick="handleLoadProjectButton"
            android:text="@string/main_menu_programs" />

        <Button
            android:id="@+id/forum_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_forum"
            android:onClick="handleForumButton"
            android:text="@string/main_menu_forum" />

        <Button
            android:id="@+id/web_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_web"
            android:onClick="handleWebResourcesButton"
            android:text="@string/main_menu_web" />

        <Button
            android:id="@+id/upload_project_button"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/main_menu_upload"
            android:onClick="handleUploadProjectButton"
            android:text="@string/main_menu_upload" />
    </org.catrobat.catroid.ui.widget.DashboardLayout>

</LinearLayout>